# crash-catcher

./: 404.html  LICENSE  README.md  README_DEV.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
crash_catcher/: __init__.py  __main__.py  crash_catcher.py
docs/: index.md  reference.md
reference/: index.html
search/: search_index.json
tests/: test_crash_catcher.py
